fixed margin and padding 2, style.css align in button

--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -29,7 +29,6 @@ body {
 
 button {
   display:block;
-  align:center;
   background: white;
   border: 1px solid #eee;
   padding:12px;
